<?xml version="1.0" encoding="utf-8"?><!--
  ~ Copyright 2018, The Android Open Source Project
  ~
  ~ Licensed under the Apache License, Version 2.0 (the "License");
  ~ you may not use this file except in compliance with the License.
  ~ You may obtain a copy of the License at
  ~
  ~     http://www.apache.org/licenses/LICENSE-2.0
  ~
  ~ Unless required by applicable law or agreed to in writing, software
  ~ distributed under the License is distributed on an "AS IS" BASIS,
  ~ WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
  ~ See the License for the specific language governing permissions and
  ~ limitations under the License.
  -->

<!-- Note that the animations may show red in Android Studio;
     however, they are present and working perfectly fine. -->

<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/navigation"
    app:startDestination="@id/fragment_diary_view">

    <fragment
        android:id="@+id/fragment_diary_view"
        android:name="com.example.diaryproject.diaryviewment.DiaryViewFragment"
        android:label="@string/fragment_diary_view"
        tools:layout="@layout/fragment_diary_view">
        <action
            android:id="@+id/action_diary_view_to_add_record"
            app:destination="@id/fragment_add_record" />
        <action
            android:id="@+id/action_diary_view_to_tag_list_view"
            app:destination="@id/fragment_tag_list_view" />
        <action
            android:id="@+id/action_diary_view_to_record"
            app:destination="@id/fragment_record" />
    </fragment>

    <fragment
        android:id="@+id/fragment_tag_list_view"
        android:name="com.example.diaryproject.taglistviewment.TagListViewFragment"
        android:label="@string/fragment_tag_list_view"
        tools:layout="@layout/fragment_tag_list_view">
        <action
            android:id="@+id/action_tag_list_view_to_add_tag"
            app:destination="@id/fragment_add_tag" />
        <action
            android:id="@+id/action_tag_list_view_to_diary_view"
            app:destination="@id/fragment_diary_view" />
        <action
            android:id="@+id/action_tag_list_view_to_tag"
            app:destination="@id/fragment_tag" />
    </fragment>

    <fragment
        android:id="@+id/fragment_add_record"
        android:name="com.example.diaryproject.addrecord.AddRecordFragment"
        android:label="@string/fragment_add_record"
        tools:layout="@layout/fragment_add_record">
        <argument
            android:name="record_id"
            app:argType="long" />
        <action
            android:id="@+id/action_add_record_to_diary_view"
            app:destination="@id/fragment_diary_view" />
    </fragment>

    <fragment
        android:id="@+id/fragment_add_tag"
        android:name="com.example.diaryproject.addtag.AddTagFragment"
        android:label="@string/fragment_add_tag"
        tools:layout="@layout/fragment_add_tag">
        <argument
            android:name="tag_id"
            app:argType="long" />
        <action
            android:id="@+id/action_add_tag_to_tag_list_view"
            app:destination="@id/fragment_tag_list_view" />
    </fragment>

    <fragment
        android:id="@+id/fragment_record"
        android:name="com.example.diaryproject.record.RecordFragment"
        android:label="@string/record"
        tools:layout="@layout/fragment_record">
        <argument
            android:name="record_id"
            app:argType="long" />
        <action
            android:id="@+id/action_record_to_diary_view"
            app:destination="@id/fragment_diary_view" />
    </fragment>

    <fragment
        android:id="@+id/fragment_tag"
        android:name="com.example.diaryproject.tag.TagFragment"
        android:label="@string/tag"
        tools:layout="@layout/fragment_tag">
        <argument
            android:name="tag_id"
            app:argType="long" />
        <action
            android:id="@+id/action_tag_to_tag_list_view"
            app:destination="@id/fragment_tag_list_view" />
    </fragment>

</navigation>
