<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
            android:id="@+id/enter_tag_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="160dp"
            android:layout_marginBottom="20dp"
            android:text="@string/enter_record_value"
            app:layout_constraintBottom_toTopOf="@+id/record_value"
            app:layout_constraintStart_toStartOf="parent" />

        <EditText
            android:id="@+id/record_value"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="100dp"
            android:layout_marginTop="108dp"
            android:ems="10"
            android:inputType="text"
            android:text=""
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/tags"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="136dp"
            android:layout_marginTop="180dp"
            android:text="@string/tags"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/tags_list"
            android:layout_width="116dp"
            android:layout_height="49dp"
            android:layout_marginStart="204dp"
            android:layout_marginTop="160dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <Spinner
            android:id="@+id/tags_spinner"
            android:layout_width="118dp"
            android:layout_height="34dp"
            android:layout_marginLeft="84dp"
            android:layout_marginTop="244dp"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <Button
            android:id="@+id/add_tag_to_record"
            style="@style/Buttons"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="236dp"
            android:layout_marginTop="232dp"
            android:text="@string/add_tag_to_record"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <Button
            android:id="@+id/confirm_button"
            style="@style/Buttons"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="60dp"
            android:layout_marginTop="160dp"
            android:text="@string/confirm"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/record_value" />

        <Button
            android:id="@+id/deny_button"
            style="@style/Buttons"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="160dp"
            android:layout_marginEnd="60dp"
            android:text="@string/deny"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/record_value" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>