<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/very_light_green">

        <EditText
            android:id="@+id/tag_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="96dp"
            android:ems="10"
            android:text=""
            android:textSize="18sp"
            app:layout_constraintEnd_toEndOf="@+id/enter_tag_name"
            app:layout_constraintStart_toStartOf="@+id/enter_tag_name"
            app:layout_constraintTop_toTopOf="parent" />

        <Button
            android:id="@+id/confirm_button"
            style="@style/Buttons"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/confirm"
            app:layout_constraintBottom_toBottomOf="@+id/deny_button"
            app:layout_constraintStart_toStartOf="@+id/tag_name"
            app:layout_constraintTop_toTopOf="@+id/deny_button"
            app:layout_constraintVertical_bias="0.0" />

        <Button
            android:id="@+id/deny_button"
            style="@style/Buttons"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="12dp"
            android:layout_marginTop="24dp"
            android:text="@string/deny"
            app:layout_constraintStart_toEndOf="@+id/confirm_button"
            app:layout_constraintTop_toBottomOf="@+id/tag_name" />

        <TextView
            android:id="@+id/enter_tag_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="32dp"
            android:text="@string/enter_tag_name"
            android:textColor="@color/green"
            android:textSize="18sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toTopOf="@+id/tag_name"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>