<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <EditText
            android:id="@+id/record_value"
            android:layout_width="250dp"
            android:layout_height="40dp"
            android:layout_marginTop="16dp"

            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.496"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:text="value" />

        <TextView
            android:id="@+id/record_tags"
            android:layout_width="250dp"
            android:layout_height="15dp"

            android:layout_marginTop="52dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.496"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/record_value"
            tools:text="tags" />

        <TextView
            android:id="@+id/record_last_change_time"
            android:layout_width="250dp"
            android:layout_height="15dp"

            android:layout_marginTop="20dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.496"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/record_value"
            tools:text="time" />

        <Button
            android:id="@+id/go_to_diary"
            style="@style/Buttons"
            android:layout_width="149dp"
            android:layout_height="51dp"
            android:layout_marginStart="44dp"
            android:layout_marginTop="260dp"
            android:text="@string/back_to_diary"
            app:layout_constraintHorizontal_chainStyle="spread"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <Button
            android:id="@+id/delete_record"
            style="@style/Buttons"
            android:layout_width="149dp"
            android:layout_height="51dp"
            android:layout_marginStart="24dp"
            android:layout_marginTop="260dp"
            android:text="@string/delete_record"
            app:layout_constraintHorizontal_chainStyle="spread"
            app:layout_constraintStart_toEndOf="@+id/go_to_diary"
            app:layout_constraintTop_toTopOf="parent" />

        <Button
            android:id="@+id/delete_tag"
            style="@style/Buttons"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="140dp"
            android:layout_marginEnd="44dp"
            android:text="@string/delete_tag"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_chainStyle="spread"
            app:layout_constraintTop_toTopOf="parent" />

        <Button
            android:id="@+id/add_tag"
            style="@style/Buttons"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="152dp"
            android:layout_marginTop="140dp"
            android:text="@string/add_tag"
            app:layout_constraintHorizontal_chainStyle="spread"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <Spinner
            android:id="@+id/tags_spinner"
            android:layout_width="118dp"
            android:layout_height="34dp"
            android:layout_marginLeft="16dp"
            android:layout_marginTop="150dp"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>